# pychess

./: README.md  gen.py  main.py  pyproject.toml
pychess/: board.py  color.py  entry.py  game.py  position.py
pychess/piece/: __init__.py  bishop.py  direction.py  errors.py  king.py  knight.py  moves.py  pawn.py  piece.py  queen.py  rook.py
tests/: test_bishop.py  test_board.py  test_game.py  test_king.py  test_knight.py  test_pawn.py  test_piece.py  test_position.py  test_queen.py  test_rook.py
