[tool.poetry]
name = "pychess"
version = "0.1.0"
description = ""
authors = ["Helielton Fioramonte <helielton.fioramonte@iatec.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
